# Autocrat

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  nexus_config.yaml  ngrok_setup.md  pyproject.toml  requirements.txt  test_brain.py
nexus/: __init__.py  cli.py
nexus/core/: __init__.py  ai_engine.py  brain.py  config.py  engine.py  events.py  heartbeat.py  learner.py  logger.py  message_bus.py  parser.py  personality.py  plugin.py
nexus/integrations/: __init__.py  telegram_bot.py
nexus/plugins/: __init__.py  app_launcher.py  clipboard.py  comet_web_agent.py  core_builder.py  file_ops.py  intelligence.py  keyboard_mouse.py  power_tools.py  process_controller.py  screen_intel.py  shell_executor.py  smart_actions.py  system_info.py  task_scheduler.py  volume_display.py  window_manager.py  workflow_engine.py
nexus/web/: __init__.py  server.py
nexus/web/static/: app.js  index.html  style.css
